--- a/styles/architect.css
+++ b/styles/architect.css
@@ -8,50 +8,136 @@
 * {
     font-family: 'Work Sans', sans-serif;
 }
-.btn-primary{
-    
-}
 
-
-/* header styles */
+/* Header Styles */
 header {
     background: rgba(255, 144, 14, 0.10);
     padding: 50px 240px;
 }
-nav{
+
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.nav-title{
-    font-size: 2.8rem;
-    color: #131313;
-    font-weight: 700;
-}
-nav > ul{
+
+nav>ul {
     display: flex;
 }
-nav li{
-   list-style: none;
-   margin-right: 30px;
-   font-size: 1rem
-   font-weight: 500;
-}
-nav li a{
-    text-decoration: none;
+
+nav li {
+    list-style: none;
+    margin-right: 30px;
+    font-weight: 500;
     color: #424242;
+    font-size: 1rem
 }
-/*banner styles*/
-.banner-content{
+
+/* Banner Styls */
+.banner-content {
     max-width: 800px;
     text-align: center;
     margin: 0 auto;
 }
-.banner-title{
-    font-size: 4rem;
+
+.banner-title {
+    color: #131313;
+    font-size: 64px;
     font-weight: 700;
-    color: #131313;
 }
-.banner-description{
+
+.banner-description {
+    color: #727272;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.btn-primary {
+    border-radius: 8px;
+    background: #FF900E;
+    margin: 20px 25px;
+    width: 180px;
+    height: 64px;
+    padding: 20px 25px;
+    color: #FFFFFF;
+    font-size: 1rem;
+    border: 0px;
+    cursor: pointer;
+}
+
+.banner img {
+    width: 100%;
+}
+
+/* main styles */
+main {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+/* teams styles */
+.teams-container {
+    display: flex;
+    align-items: center;
+}
+
+.teams-img-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+
+.teams-content {
+    padding-left: 70px;
+    padding-right: 70px;
+}
+
+.teams-title {
+    font-size: 2.8rem;
+    width: 468px;
+}
+
+.Quick {
+    color: #727272;
+    font-size: 45px;
+    font-weight: 500;
+}
+
+.of Our {
     color: #131313;
+    font-size: 45px;
+    font-weight: 700;
+}
+
+.Features {
+    color: #FF900E;
+    font-size: 45px;
+    font-weight: 700;
+}
+
+
+
+
+
+/* Mobile Devices */
+@media screen and (max-width: 576px) {
+    header {
+        padding: 20px;
+    }
+
+    nav {
+        flex-direction: column;
+    }
+}
+
+/* Medium Devices */
+@media screen and (min-width: 576px) and max-width: 960px) {
+    header {
+        padding: 50px;
+    }
+
+    nav {
+        flex-direction: column;
+    }
+
 }
