--- a/styles/architect.css
+++ b/styles/architect.css
@@ -72,7 +72,7 @@ nav li {
 /* main styles */
 main {
     max-width: 1440px;
-    margin: 0 auto;
+    margin: 70px auto;
 }
 
 /* teams styles */
@@ -88,8 +88,8 @@ main {
 }
 
 .teams-content {
-    padding-left: 70px;
-    padding-right: 70px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .teams-title {
@@ -125,8 +125,11 @@ main {
         padding: 20px;
     }
 
-    nav {
+    nav, .teams-container{
         flex-direction: column;
+    }
+    .teams-img-container{
+        grid-template-columns: 1fr;
     }
 }
 
@@ -136,7 +139,7 @@ main {
         padding: 50px;
     }
 
-    nav {
+    nav, .teams-img-container {
         flex-direction: column;
     }
 
